# autonomous-racing

./: .gitignore  README.md
Cad_files/: readme.txt
Cad_files/Ben parts/: EnergizerBottom.SLDPRT  FrontBaseSpacer.SLDPRT  QuarterInchNylonStandoff.SLDPRT  SideBaseSpacer2_ben.SLDPRT  USBHub.SLDPRT
Cad_files/Ben parts/Camera_mount/: camera_mount_bottom.STL  camera_mount_bottom_new.x3g  camera_mount_new.SLDPRT  camera_mount_top.SLDPRT
Cad_files/Ben parts/hub_mount/: Thumbs.db  hub_mount_back.SLDPRT  (+3 more)
Cad_files/MountDesigns/: Assem1.SLDASM  BasePlate.DWG  BasePlate.SLDPRT  EnergizerBack.DWG  EnergizerBack.SLDPRT  EnergizerBattery.SLDPRT  EnergizerBottom.DWG  FrontBaseSpacer.DWG  Lidar2.SLDPRT  SideBaseSpacer.DWG  SideBaseSpacer.SLDPRT  SideBaseSpacer2.DWG  SideBaseSpacer2.SLDPRT  ThatOtherEnrgizerSide.DWG  ThatOtherEnrgizerSide.SLDPRT  bottomBaseSpacer.DWG  bottomBaseSpacer.SLDPRT
Cad_files/chassis_v1/: GreyCamera.SLDPRT  Jetson.SLDPRT  base_plate_new.SLDPRT  bottomBaseSpacer.SLDPRT
Cad_files/chassis_v2/: Assem1.SLDASM  SideBaseSpacer.SLDPRT  base_plate_new.SLDPRT
Cad_files/chassis_v3/: ASS.SLDASM  EnergizerBattery.SLDPRT  EnergizerClip.SLDPRT  HubBacker.SLDPRT  M3_10mm_SocketHead.SLDPRT  M3_16mm_SocketHead.SLDPRT  SquareNut.SLDPRT  USBHub.SLDPRT  USBHub_back_wall.SLDPRT  USBHub_front_wall.SLDPRT  WireWrap.SLDPRT  base_plate_bottom.SLDPRT  base_plate_top.SLDPRT  base_wall.SLDPRT
FloorPlans/: 293Flr3.dwg  293Flr4.dwg  293Flr5.dwg  570FLR2.dwg  570FLR3.dwg
RANSAC/RANSAC_test/: Makefile  ransac_test  ransac_test.cpp
RANSAC/basic_path_plan/: CMakeLists.txt  lidar.launch  package.xml
Vanishing Point/camera-1394-drivers/: install.sh
VanishingPoint/: .gitignore
VanishingPoint/camera-1394-drivers/: install.sh
VanishingPoint/code/: CMakeCache.txt  Makefile  cmake_install.cmake  readme  vanishing_point_video.cpp  vp
VanishingPoint/code/vanishing_point_standalone/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  output2.avi  test.cpp  vanishing_point_video.cpp  vp
VanishingPoint/simulations/: Data.mat  faragasso_dynamics.slx  faragasso_params.m  mfun.m  sim_ieee.slx
pennARC_ws/: \  cpp_bash.cpp  echo_bash.sh  enable_maxPerformance.sh  ignition.sh  start.sh  start.sh~
pennARC_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
pennARC_ws/src/beginner_tutorials/: CMakeLists.txt  CMakeLists.txt~
pennARC_ws/src/beginner_tutorials/src/: ORB_translate.cpp  PID_Euler.cpp  PID_Euler.cpp~  PID_Euler_EventTrig.cpp  PID_Euler_EventTrig.cpp~  driveControl.cpp  emergency_stop.cpp  final.csv  listener.cpp  talkerim.cpp  teleop_traxxas.cpp  vanishing_node.cpp  vanishing_node.cpp~  vanishing_node_release.cpp  vanishing_node_release.cpp~
pennARC_ws/src/beginner_tutorials/src/custom_messages/: CMakeLists.txt
pennARC_ws/src/beginner_tutorials/src/custom_messages/msg/: driveMessage2.msg  onlySteering.msg
pennARC_ws/src/beginner_tutorials/src/custom_messages/ros_lib/ackermann_msgs/: AckermannDriveStamped.h
pennARC_ws/src/beginner_tutorials/src/custom_messages/ros_lib/asctec_hl_comm/: GpsCustom.h  PositionWithCovarianceStamped.h  mav_ctrl.h  mav_imu.h  mav_state.h
pennARC_ws/src/beginner_tutorials/src/custom_messages/ros_lib/camera1394/: GetCameraRegisters.h
pennARC_ws/src/beginner_tutorials/src/custom_messages/ros_lib/custom_messages/: driveMessage.h
pennARC_ws/src/beginner_tutorials/src/custom_messages/ros_lib/driver_base/: ConfigValue.h
pennARC_ws/src/beginner_tutorials/src/custom_messages/ros_lib/frontier_exploration/: ExploreTaskActionResult.h  ExploreTaskFeedback.h  Frontier.h  UpdateBoundaryPolygon.h
pennARC_ws/src/beginner_tutorials/src/custom_messages/ros_lib/image_exposure_msgs/: ExposureSequence.h  ImageExposureStatistics.h
pennARC_ws/src/beginner_tutorials/src/custom_messages/ros_lib/kobuki_msgs/: ControllerInfo.h  ScanAngle.h
pennARC_ws/src/beginner_tutorials/src/custom_messages/ros_lib/pano_ros/: PanoCaptureAction.h  PanoCaptureActionResult.h  PanoCaptureFeedback.h  StitchAction.h  StitchActionResult.h  StitchFeedback.h  StitchGoal.h
pennARC_ws/src/beginner_tutorials/src/custom_messages/ros_lib/pr2_gazebo_plugins/: ModelJointsState.h  PlugCommand.h
pennARC_ws/src/beginner_tutorials/src/custom_messages/ros_lib/pr2_mechanism_msgs/: ActuatorStatistics.h  ControllerStatistics.h  ListControllerTypes.h  ListControllers.h  LoadController.h  SwitchControllerActionResult.h  SwitchControllerResult.h
pennARC_ws/src/beginner_tutorials/src/custom_messages/ros_lib/pr2_msgs/: AccelerometerState.h  AccessPoint.h  BatteryServer.h  BatteryState2.h  DashboardState.h  LaserTrajCmd.h  PeriodicCmd.h  PowerState.h
pennARC_ws/src/beginner_tutorials/src/custom_messages/ros_lib/rocon_interaction_msgs/: GetInteraction.h  GetInteractions.h  Interaction.h  InteractiveClient.h  InteractiveClients.h  RemoconStatus.h  SetInteractions.h
pennARC_ws/src/beginner_tutorials/src/custom_messages/ros_lib/rocon_std_msgs/: GetPlatformInfo.h
pennARC_ws/src/beginner_tutorials/src/custom_messages/ros_lib/sensor_fusion_comm/: DoubleMatrixStamped.h  ExtState.h  InitHeight.h
pennARC_ws/src/beginner_tutorials/src/custom_messages/ros_lib/stdr_msgs/: KinematicMsg.h  RegisterGui.h  RegisterRobotAction.h  RegisterRobotResult.h  RobotIndexedMsg.h  RobotIndexedVectorMsg.h  RobotMsg.h
pennARC_ws/src/beginner_tutorials/src/custom_messages/ros_lib/turtlebot_msgs/: PanoramaImg.h
pennARC_ws/src/beginner_tutorials/src/custom_messages/ros_lib/twist_mux_msgs/: JoyPriorityFeedback.h  JoyTurboAction.h  JoyTurboActionFeedback.h  JoyTurboActionGoal.h
pennARC_ws/src/beginner_tutorials/src/custom_messages/ros_lib/wfov_camera_msgs/: WFOVImage.h
platform_interface/: README.txt
platform_interface/ROS/beginner_tutorials/: CMakeLists.txt  package.xml
platform_interface/ROS/beginner_tutorials/src/: .listener.cpp.swp  .talker.cpp.swo  .talker.cpp.swp  PID_Euler.cpp  driveControl.cpp  emergency_stop.cpp  talker.cpp  teleop_traxxas.cpp
xlab_pennARC/hector_files/: mapping_default.launch  tutorial.launch
xlab_pennARC/learning_tf/: CMakeLists.txt  package.xml
(+250 files in other folders)
